<resources>
    <string name="app_name">FoodOrder</string>
    <string name="get_started">Get Started!</string>
    <string name="img_logo">logo</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="home_title">Home</string>
    <string name="change_password_title">Change Password</string>
    <string name="forgot_title">Forgot Password</string>
    <string name="user_title">UserInformation</string>
    <string name="category_title">Category</string>
    <string name="slide_title">Hot</string>
    <string name="admin_title">Admin</string>
    <string name="login_to_home">login_to_home</string>
    <string name="login_username">Please enter username</string>
    <string name="login_password">Please enter password</string>
    <string name="login_forgot">Forgot password?</string>
    <string name="not_account">Don\'t have account?</string>
    <string name="to_sign_up">Sign up</string>
    <string name="other_social">Or</string>
    <string name="facebook_login">facebook_login</string>
    <string name="facebook">Facebook</string>
    <string name="google_login">google_login</string>
    <string name="google">Google</string>
    <string name="to_sign_in">Sign in</string>
    <string name="already_account">Have already an account?</string>
    <string name="register_to_home">register_to_home</string>
    <string name="register_username">Please enter username</string>
    <string name="register_fullName">Please enter full-name</string>
    <string name="register_password">Please enter password</string>
    <string name="register_rePassword">Please enter re-password</string>
    <string name="register_address">Please enter address</string>
    <string name="register_email">Please enter e-mail</string>
    <string name="register_phone">Please enter phone number</string>
    <string name="forgot_email">Please enter reset email</string>
    <string name="forget_title">Send Email</string>
    <string name="forgot_to_sign_in">Return to sign in</string>
    <string name="changePassword_old">Please enter old password</string>
    <string name="changePassword_new">Please enter new password</string>
    <string name="changePassword_reNew">Please enter re-new password</string>
    <string name="change_password_to_user_information">Return the user information</string>
    <string name="aboutUs_title">About us</string>
    <string name="member_01">Nguyen Van Toan - CE150811</string>
    <string name="member_02">Nguyen Chanh Tong - CE150811</string>
    <string name="member_03">Huynh Le Hai Dang - CE150811</string>
    <string name="member_04">On Gia Loc - CE150811</string>
    <string name="member_05">Duong Van Thanh Cong - CE150811</string>
    <string name="about_us_to_home">aboutUs_to_home</string>
    <string name="forgot_to_home">forgot_to_home</string>
    <string name="image_product">Image Product</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product price</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="vnd">VND</string>
    <string name="product_detail_to_product">product detail to product</string>
    <string name="admin_to_home">admin_to_home</string>
    <string name="admin_to_user">admin_to_user</string>
    <string name="admin_to_product">admin_to_product</string>
    <string name="admin_to_changepassword">admin_to_changePassword</string>
    <string name="admin_to_editinformation">admin_to_editInformation</string>
    <string name="admin_to_search">admin_to_search</string>
    <string name="avatar">avatar</string>
    <string name="txt_username">nguyentoan</string>
    <string name="logout">logout</string>
    <string name="user_information_to_home">user information to home</string>
    <string name="name">Name</string>
    <string name="hint">buff</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="user_information">User Information</string>
    <string name="product_to_home">product_to_home</string>
    <string name="product_to_cart">product_to_cart</string>
    <string name="price">Price</string>
    <string name="image">Image</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="product_image_description">product_image_description</string>
    <string name="search_to_home">search_to_home</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="create_upper">CREATE PRODUCT</string>
    <string name="edit_upper">EDIT PRODUCT</string>
    <string name="delete_upper">DELETE PRODUCT</string>
    <string name="cart">cart</string>
    <string name="back">back</string>
    <string name="place_order">Place order</string>
    <string name="total_price">Total: </string>
    <string name="total_value">3000000 VND</string>
    <string name="subtract">-</string>
    <string name="num_quantity">0</string>
    <string name="increase">+</string>
    <string name="product_title">product_title</string>
    <string name="cart_title">cart_title</string>
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

</resources>