<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity"
    android:background="@color/gray">

    <LinearLayout
        android:id="@+id/form_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_admin_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/admin_title"
            android:textColor="#311B92"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/form_admin_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_admin_home"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/admin_to_home"
                android:background="@drawable/ic_home" />

            <ImageView
                android:id="@+id/img_admin_user"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/admin_to_user"
                android:background="@drawable/ic_user" />

            <ImageView
                android:id="@+id/img_admin_product"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/admin_to_product"
                android:background="@drawable/ic_product" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/form_admin_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_admin_changePassword"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/admin_to_changepassword"
                android:background="@drawable/ic_key" />

            <ImageView
                android:id="@+id/img_admin_editInformation"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/ic_edit"
                android:contentDescription="@string/admin_to_editinformation"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/img_admin_search"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/admin_to_search"
                android:background="@drawable/ic_search" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>