<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_productDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/silver">

    <LinearLayout
        android:id="@+id/form_productDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_productDetail"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/icon_cancel"
            android:contentDescription="@string/image_product" />

        <LinearLayout
            android:id="@+id/form_productInformation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:padding="10dp"
            android:background="@color/silver"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_productDetail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/form_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_productDetail_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/product_price"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/vnd"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/form_increment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/subtract"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/subtract"
                    android:textColor="@color/white"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_quantity"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/item_quantity"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"/>

                <Button
                    android:id="@+id/increase"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/increase"
                    android:textColor="@color/white"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>