<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_forgotPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@drawable/forgot_password">

    <LinearLayout
        android:id="@+id/form_forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_forgot_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_title"
            android:textColor="@color/blue"
            android:textSize="45sp"
            android:background="@color/silver"
            android:layout_marginBottom="30dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_forgot_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@color/white"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="15dp"
            android:hint="@string/forgot_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btn_sendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lime"
            android:text="@string/forget_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/btn_toSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:text="@string/forgot_to_sign_in"
            android:textColor="@color/yellow" />

        <ImageView
            android:id="@+id/img_forgot_cancel"
            android:layout_gravity="center"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/forgot_to_home"
            android:background="@drawable/icon_cancel" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>